--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.commons</groupId>
 		<artifactId>argeo-commons</artifactId>
-		<version>2.1.58-SNAPSHOT</version>
+		<version>2.1.58</version>
 	</parent>
 	<groupId>org.argeo.suite</groupId>
 	<artifactId>argeo-suite</artifactId>
@@ -18,7 +18,7 @@
 	</modules>
 	<properties>
 		<developmentCycle.argeo-suite>0.1</developmentCycle.argeo-suite>
-		<version.argeo-connect>2.1.63-SNAPSHOT</version.argeo-connect>
+		<version.argeo-connect>2.1.63</version.argeo-connect>
 		<version.argeo-tp-extras>2.1.9</version.argeo-tp-extras>
 		<git.rw />
 	</properties>
