--- a/sdk/argeo_suite_web.properties
+++ b/sdk/argeo_suite_web.properties
@@ -9,20 +9,14 @@ argeo.osgi.start.5.workbench=org.eclipse.equinox.http.registry
 argeo.osgi.start.5.apps=org.argeo.connect.people.web,\
 org.argeo.connect.people.rap
 
-argeo.osgi.start.6.apps=org.argeo.suite.web
-
-## rel path from the exec/<app_name>/ folder (user.dir) to the FIRST INIT dir
-#argeo.node.init=../../../org.argeo.suite.web/resources/init
-
+argeo.osgi.start.6.apps=org.argeo.suite.web,\
+org.argeo.suite.workbench.rap
 
 ## Rap Workbench configuration
 ## Open the user admin page by default when opening the workbench
 org.argeo.security.ui.initialPerspective=org.argeo.cms.ui.workbench.adminSecurityPerspective
 # Default home page for the Specific People RAP workbench perspective 
 org.argeo.ui.openHomeCommandId=org.argeo.connect.people.rap.openDefaultEditor
-
-## LDAP
-#argeo.node.useradmin.uris=dc=demo,dc=suite,dc=argeo,dc=org.ldif?userBase=ou=People&groupBase=ou=Groups
 
 ## JCR BACKEND
 argeo.node.repo.type=h2
