--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
 			<distribution>repo</distribution>
 			<comments><![CDATA[
-Argeo Suite - Rugged software for a rough world
+Smart Data Productivity Suite - Lean, robust and secured distributed Java applications
 Copyright (C) 2017 Argeo GmbH
 
 This program is free software: you can redistribute it and/or modify
