--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<description></description>
 	<version>0.1.1-SNAPSHOT</version>
 	<modules>
+		<module>org.argeo.suite.core</module>
 		<module>org.argeo.suite.web</module>
 		<module>org.argeo.suite.workbench.rap</module>
 		<module>sdk</module>
