--- a/sdk/org.argeo.suite.sdk/pom.xml
+++ b/sdk/org.argeo.suite.sdk/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>sdk</artifactId>
-		<version>0.1.2</version>
+		<version>0.1.3-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.suite.sdk</artifactId>
@@ -17,14 +17,14 @@
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.workbench.rap</artifactId>
-			<version>0.1.2</version>
+			<version>0.1.3-SNAPSHOT</version>
 		</dependency>
 		
 		<!-- Web UI -->
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.web</artifactId>
-			<version>0.1.2</version>
+			<version>0.1.3-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Base CMS distribution -->
