--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
 		<module>sdk</module>
 	</modules>
 	<properties>
-		<version.argeo-suite>0.1.4-SNAPSHOT</version.argeo-suite>
+		<version.argeo-suite>0.1.4</version.argeo-suite>
 		<developmentCycle.argeo-suite>0.1</developmentCycle.argeo-suite>
-		<version.argeo-connect>2.1.67-SNAPSHOT</version.argeo-connect>
+		<version.argeo-connect>2.1.67</version.argeo-connect>
 		<version.argeo-tp-extras>2.1.9</version.argeo-tp-extras>
 		<git.rw />
 	</properties>
