--- a/org.argeo.suite.core/pom.xml
+++ b/org.argeo.suite.core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>argeo-suite</artifactId>
-		<version>0.1.4-SNAPSHOT</version>
+		<version>0.1.4</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.suite.core</artifactId>
