Clean legacy Code, Adapt spring links

--- a/org.argeo.suite.core/pom.xml
+++ b/org.argeo.suite.core/pom.xml
@@ -27,5 +27,10 @@
 			<artifactId>org.argeo.connect.documents</artifactId>
 			<version>${version.argeo-connect}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.argeo.connect</groupId>
+			<artifactId>org.argeo.connect.activities</artifactId>
+			<version>${version.argeo-connect}</version>
+		</dependency>
 	</dependencies>
 </project>
