--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.argeo.commons</groupId>
 		<artifactId>argeo-commons</artifactId>
-		<version>2.1.61</version>
+		<version>2.1.62-SNAPSHOT</version>
 	</parent>
 	<groupId>org.argeo.suite</groupId>
 	<artifactId>argeo-suite</artifactId>
@@ -113,7 +113,7 @@ which are used as well as that of the covered work.]]>
 	<distributionManagement>
 		<repository>
 			<id>staging</id>
-			<url>dav:https://forge.argeo.org/data/java/argeo-suite-0.1</url>
+			<url>dav:https://forge.argeo.org/data/java/argeo-extras-2.1</url>
 			<uniqueVersion>false</uniqueVersion>
 		</repository>
 	</distributionManagement>
