--- a/org.argeo.suite.web/pom.xml
+++ b/org.argeo.suite.web/pom.xml
@@ -18,13 +18,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.connect</groupId>
-			<artifactId>org.argeo.connect.people.web</artifactId>
+			<artifactId>org.argeo.people.web</artifactId>
 			<version>${version.argeo-connect}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.commons</groupId>
-			<artifactId>org.argeo.cms.ui</artifactId>
-			<version>${version.argeo-commons}</version>
 		</dependency>
 	</dependencies>
 </project>
