--- a/org.argeo.suite.workbench.rap/pom.xml
+++ b/org.argeo.suite.workbench.rap/pom.xml
@@ -19,12 +19,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.connect</groupId>
-			<artifactId>org.argeo.connect.people.workbench.rap</artifactId>
-			<version>${version.argeo-connect}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.connect</groupId>
-			<artifactId>org.argeo.connect.ui</artifactId>
+			<artifactId>org.argeo.people.workbench.rap</artifactId>
 			<version>${version.argeo-connect}</version>
 		</dependency>
 	</dependencies>
