Adapt to latest version

--- a/sdk/argeo_suite_web.properties
+++ b/sdk/argeo_suite_web.properties
@@ -6,8 +6,7 @@ argeo.osgi.start.4.apps=org.eclipse.gemini.blueprint.extender
 argeo.osgi.start.5.workbench=org.eclipse.equinox.http.registry
 
 # WEB and RAP Workbench
-argeo.osgi.start.5.apps=org.argeo.connect.people.web,\
-org.argeo.connect.people.rap
+argeo.osgi.start.5.apps=org.argeo.suite.app
 
 argeo.osgi.start.6.apps=org.argeo.suite.web,\
 org.argeo.suite.workbench.rap
@@ -16,7 +15,7 @@ org.argeo.suite.workbench.rap
 ## Open the user admin page by default when opening the workbench
 org.argeo.security.ui.initialPerspective=org.argeo.cms.ui.workbench.adminSecurityPerspective
 # Default home page for the Specific People RAP workbench perspective 
-org.argeo.ui.openHomeCommandId=org.argeo.connect.people.rap.openDefaultEditor
+org.argeo.ui.openHomeCommandId=org.argeo.suite.workbench.rap.openDashboardEditor
 
 ## JCR BACKEND
 argeo.node.repo.type=h2
