Use correct default command, use latest snapshots

--- a/sdk/argeo_suite_web.properties
+++ b/sdk/argeo_suite_web.properties
@@ -14,8 +14,8 @@ org.argeo.suite.workbench.rap
 ## Rap Workbench configuration
 ## Open the user admin page by default when opening the workbench
 org.argeo.security.ui.initialPerspective=org.argeo.cms.ui.workbench.adminSecurityPerspective
-# Default home page for the Specific People RAP workbench perspective 
-org.argeo.ui.openHomeCommandId=org.argeo.suite.workbench.rap.openDashboardEditor
+# Use the WorkbenchAppService to open a default home page
+org.argeo.ui.openHomeCommandId=org.argeo.connect.ui.openDefaultEditor
 
 ## JCR BACKEND
 argeo.node.repo.type=h2
