Improve launch config

--- a/sdk/argeo_suite_web.properties
+++ b/sdk/argeo_suite_web.properties
@@ -27,7 +27,7 @@ org.osgi.service.http.port=7070
 log4j.configuration=file:../../log4j.properties
 
 # SECURITY
-org.osgi.framework.security=osgi
+java.security.manager=
 java.security.policy=file:../../all.policy
 
 # DON'T CHANGE BELOW
