Activate web UI

--- a/sdk/argeo_suite_web.properties
+++ b/sdk/argeo_suite_web.properties
@@ -6,9 +6,9 @@ argeo.osgi.start.4.apps=org.eclipse.gemini.blueprint.extender
 argeo.osgi.start.5.workbench=org.eclipse.equinox.http.registry
 
 # WEB and RAP Workbench
-argeo.osgi.start.5.apps=org.argeo.suite.app
+argeo.osgi.start.5.apps=org.argeo.suite.apps
 
-argeo.osgi.start.6.apps=org.argeo.suite.web,\
+argeo.osgi.start.6.apps=org.argeo.suite.apps.web,\
 org.argeo.suite.workbench.rap
 
 ## Rap Workbench configuration
