--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<module>org.argeo.suite.workbench.rap</module>
 		<module>org.argeo.suite.apps</module>
 		<module>org.argeo.suite.apps.web</module>
-		<module>sdk</module>
+		<module>dep</module>
 	</modules>
 	<properties>
 		<version.argeo-suite>0.1.12-SNAPSHOT</version.argeo-suite>
