--- a/org.argeo.suite.theme.argeo2/build.properties
+++ b/org.argeo.suite.theme.argeo2/build.properties
@@ -2,7 +2,6 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               theme-old/,\
-               plugin.xml,\
-               icons/,\
-               img/
+                icons/,\
+               img/,\
+               theme.css
