--- a/dep/org.argeo.suite.platform/pom.xml
+++ b/dep/org.argeo.suite.platform/pom.xml
@@ -24,6 +24,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
+			<artifactId>org.argeo.suite.theme.argeo2</artifactId>
+			<version>0.1.12-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.web</artifactId>
 			<version>0.1.12-SNAPSHOT</version>
 		</dependency>
