--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.commons</groupId>
 		<artifactId>argeo-commons</artifactId>
-		<version>2.1.70-SNAPSHOT</version>
+		<version>2.1.70</version>
 	</parent>
 	<groupId>org.argeo.suite</groupId>
 	<artifactId>argeo-suite</artifactId>
@@ -21,10 +21,10 @@
 		<module>dep</module>
 	</modules>
 	<properties>
-		<version.argeo-suite>0.1.12-SNAPSHOT</version.argeo-suite>
+		<version.argeo-suite>0.1.12</version.argeo-suite>
 		<developmentCycle.argeo-suite>0.1</developmentCycle.argeo-suite>
-		<version.argeo-connect>2.1.78-SNAPSHOT</version.argeo-connect>
-		<version.argeo-tp-extras>2.1.9</version.argeo-tp-extras>
+		<version.argeo-connect>2.1.78</version.argeo-connect>
+		<version.argeo-tp-extras>2.1.10</version.argeo-tp-extras>
 		<git.rw />
 	</properties>
 	<scm>
