--- a/dep/org.argeo.suite.platform/pom.xml
+++ b/dep/org.argeo.suite.platform/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>dep</artifactId>
-		<version>0.1.12</version>
+		<version>0.1.13-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.suite.platform</artifactId>
@@ -15,22 +15,22 @@
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.apps</artifactId>
-			<version>0.1.12</version>
+			<version>0.1.13-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.workbench.rap</artifactId>
-			<version>0.1.12</version>
+			<version>0.1.13-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.theme.argeo2</artifactId>
-			<version>0.1.12</version>
+			<version>0.1.13-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.web</artifactId>
-			<version>0.1.12</version>
+			<version>0.1.13-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Base CMS distribution -->
