--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<module>dep</module>
 	</modules>
 	<properties>
-		<version.argeo-suite>0.1.12</version.argeo-suite>
+		<version.argeo-suite>0.1.13-SNAPSHOT</version.argeo-suite>
 		<developmentCycle.argeo-suite>0.1</developmentCycle.argeo-suite>
 		<version.argeo-connect>2.1.78</version.argeo-connect>
 		<version.argeo-tp-extras>2.1.10</version.argeo-tp-extras>
