--- a/dep/org.argeo.suite.platform/pom.xml
+++ b/dep/org.argeo.suite.platform/pom.xml
@@ -24,11 +24,6 @@
 			<version>0.1.13-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>org.argeo.connect</groupId>
-			<artifactId>org.argeo.theme.argeo2</artifactId>
-			<version>2.1.79-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.web</artifactId>
 			<version>0.1.13-SNAPSHOT</version>
@@ -40,6 +35,13 @@
 			<artifactId>org.argeo.connect.platform</artifactId>
 			<version>${version.argeo-connect}</version>
 		</dependency>
+		
+		<!-- Argeo TP Extras -->
+		<dependency>
+			<groupId>org.argeo.tp.payment</groupId>
+			<artifactId>com.stripe</artifactId>
+		</dependency>
+		
 	</dependencies>
 	<profiles>
 		<profile>
