Add Documents to Eclipse 4

--- a/org.argeo.suite.cms/build.properties
+++ b/org.argeo.suite.cms/build.properties
@@ -9,5 +9,8 @@ bin.includes = META-INF/,\
                OSGI-INF/systemMaintenanceService.xml,\
                OSGI-INF/activitiesMaintenanceService.xml,\
                OSGI-INF/resourcesMaintenanceService.xml,\
-               OSGI-INF/peopleMaintenanceService.xml
+               OSGI-INF/peopleMaintenanceService.xml,\
+               OSGI-INF/trackerService.xml,\
+               OSGI-INF/documentsService.xml,\
+               OSGI-INF/trackerMaintenanceService.xml
 source.. = src/
