--- a/org.argeo.suite.e4.rap/build.properties
+++ b/org.argeo.suite.e4.rap/build.properties
@@ -3,5 +3,6 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/systemE4Service.xml,\
                OSGI-INF/activitiesE4Service.xml,\
-               OSGI-INF/peopleE4Service.xml
+               OSGI-INF/peopleE4Service.xml,\
+               OSGI-INF/documentsE4Service.xml
 source.. = src/
